# Clocky

./: config_sample.json  partitions_4MB.csv  sdkconfig
components/cfg/: CMakeLists.txt  cfg.cpp  cfg.hpp
components/color_processor/: CMakeLists.txt  stub.c
components/event_loop_wrapper/: CMakeLists.txt  event_loop.cpp  event_loop.hpp
components/web_server_wrapper/: CMakeLists.txt  web_server.cpp  web_server.hpp
components/wifi_wrapper/: CMakeLists.txt  wifi_wrapper.cpp  wifi_wrapper.hpp
main/: CMakeLists.txt  app_handling.hpp  canvas_impl.h  main.cpp  mount_fs.h  wifi_handling.hpp
main/file_server/: file_server.c  file_server.h
